// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserPage> when the user has failed to load should match the snapshot 1`] = `
<DocumentFragment>
  <div
    id="page"
  >
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user has successfully loaded should match the snapshot 1`] = `
<DocumentFragment>
  <div
    id="page"
  >
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Alan Bradley
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            alan.bradley@example.com
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            User
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user is loading should match the snapshot 1`] = `
<DocumentFragment>
  <div
    id="page"
  >
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <div
        class="form-loading-overlay absolute grid h-full place-content-center w-full"
      >
        <div
          class="inline-block text-center"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-user h-10 w-10"
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"
              fill="currentColor"
            />
          </svg>
          <br />
          Loading User...
        </div>
      </div>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
      </dl>
    </div>
  </div>
</DocumentFragment>
`;
